k8s/staging/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: logflare-staging
  labels:
    app: logflare-staging
spec:
  progressDeadlineSeconds: 600
  replicas: 3
  revisionHistoryLimit: 10
  minReadySeconds: 30
  selector:
    matchLabels:
      app: logflare-staging
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
    type: RollingUpdate
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: logflare-staging
    spec:
      affinity:
        podAntiAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
          - labelSelector:
              matchExpressions:
              - key: app
                operator: In
                values:
                - logflare-staging
            topologyKey: kubernetes.io/hostname
      containers:
        - image: gcr.io/logflare-staging/logflare_origin:latest
          imagePullPolicy: Always
          name: logflare
          ports:
            - containerPort: 4000
              protocol: TCP
      dnsPolicy: ClusterFirst
      nodeSelector:
        logflare-node: "true"
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 120
