k8s/staging/headless_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: logflare-staging-headless
  namespace: default
spec:
  ports:
    - name: epmd
      port: 4369
  selector:
    app: logflare-staging
  clusterIP: None
